[package]
name = "async-chat"
version = "0.1.0"
edition = "2024"

[dependencies]
async-std = {version= "1.7", features = ["unstable"]}
tokio = {version= "1.7", features = ["sync"]}
serde = {version= "1.0", features = ["derive", "rc"]}
serde_json = "1.0"


[[bin]]
name = "client"
path = "bin/client.rs"

[[bin]]
name = "server"
path = "bin/server/main.rs"
